@@ -16,7 +16,8 @@
 	* Changed interface for qnclosedbsb()
 	* qnclosedsinglebsb() added
 	* Changed interface for qnopenbsb()
-	
+	* Fixed bug in function qnconvolution()
+
 2012-09-08 Moreno Marzolla <marzolla@cs.unibo.it>
 
 	* Version 1.1.1 released
